force-app/main/default/objects/Workforce_Management_Platform_Settings__c/Workforce_Management_Platform_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure settings for the Workforce Management Platform API.</description>
    <label>Workforce Management Platform Settings</label>
</CustomObject>