force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The maximum number of records to be processed in a single transaction. Note current implementation is limited to 100.</description>
    <inlineHelpText>The maximum number of records to be processed in a single transaction. Note current implementation is limited to 100.</inlineHelpText>
    <label>Batch Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>