force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, when the scheduler class is executed, no jobs will be queued.</description>
    <inlineHelpText>If unchecked, when the scheduler class is executed, no jobs will be queued.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>