force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The URL of the API endpoint used to make callouts to the Workforce Management Platform.</description>
    <inlineHelpText>The URL of the API endpoint used to make callouts to the Workforce Management Platform.</inlineHelpText>
    <label>Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>