force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description>The maximum number of attempts which a Case record will be processed.</description>
    <inlineHelpText>The maximum number of attempts which a Case record will be processed.</inlineHelpText>
    <label>Max Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>