force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Max_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Records__c</fullName>
    <description>The maximum number of records to be picked up when the scheduled job runs.</description>
    <inlineHelpText>The maximum number of records to be picked up when the scheduled job runs.</inlineHelpText>
    <label>Max Records</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>