force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Email address to send job notifications to.</description>
    <inlineHelpText>Email address to send job notifications to.</inlineHelpText>
    <label>Notification Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>