force-app/main/default/objects/Workforce_Management_Platform_Settings__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The timeout in seconds for each API callout request.</description>
    <inlineHelpText>The timeout in seconds for each API callout request.</inlineHelpText>
    <label>Timeout</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>